# clx

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml
examples/: eta_rate.rs  log_integration.rs  osc_progress.rs  progress.rs  right_align.rs  styling.rs
src/: error.rs  lib.rs  osc.rs  progress.rs  progress_bar.rs  style.rs  tracing.rs
src/progress/: diagnostics.rs  flex.rs  format.rs  job.rs  log.rs  mod.rs  output.rs  render.rs  spinners.rs  state.rs  tera_setup.rs
tests/: progress_concurrent.rs  progress_control.rs  progress_lifecycle.rs
