[package]
name = "clx"
version = "1.1.0"
edition = "2024"
authors = ["jdx"]
description = "Components for CLI applications"
license = "MIT"
repository = "https://github.com/jdx/clx"
readme = "README.md"
include = ["examples/**/*.rs", "src/**/*.rs"]
rust-version = "1.85"

[dependencies]
console = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
tera = "1"
thiserror = "2"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "user"] }

[dev-dependencies]
test-log = "0.2"
